--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-#container{
+.cont {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container {
     position: relative;
-    width: 80%;
+    width: 80vmin;
+    box-sizing: border-box;
     background-color: aqua;
 }
 
